# nagios-plugins-sapcontrol

./: Makefile.am  README  configure.ac
plugins/: Makefile.am  SAPControl.wsdl  check_sapcontrol.c  xmlutils.h
